--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,47 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/a_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="A-1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/a_1_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="A-1-2"
+        app:layout_constraintTop_toTopOf="@id/a_1"
+        app:layout_constraintStart_toEndOf="@id/a_1"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/b_1_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="B-1-1"
+        app:layout_constraintTop_toTopOf="@id/a_1"
+        app:layout_constraintStart_toEndOf="@id/a_1_2"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/d"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="D"
+        app:layout_constraintTop_toTopOf="@id/a_1"
+        app:layout_constraintStart_toEndOf="@id/b_1_1"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/a_1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
